@@ -5,7 +5,7 @@
 /// </summary>
 /// 
 /// <remarks>
-/// PY Lapersonne - Version 1.1.0
+/// PY Lapersonne - Version 1.1.1
 /// </remarks>
 
 using UnityEngine;
@@ -105,7 +105,8 @@ public static class TerrainUtils {
 	/// </summary>
 	/// <param name="hexagone">L'hexagone à enregistrer</param>
 	public static void ajouterHexagone( HexagoneInfo hexagone ){
-		//Debug.Log("Ajout d'un hexagone : " + hexagone.positionLocaleSurTerrain);
+		Debug.Log("Ajout d'un hexagone : " + hexagone.positionLocaleSurTerrain
+		          +", de texture : "+ hexagone.GetTextureAppliquee());
 		hexagones.Add(hexagone);
 	}
 
